fix: fix maven import
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>